# sixfinger-api

./: LICENSE  README.md  pyproject.toml
sixfinger/: __init__.py  api.py  errors.py  models.py
sixfinger/transformers/: __init__.py
sixfinger/transformers/cli/: __init__.py  generate.py  train.py
sixfinger/transformers/generation/: __init__.py  sampling.py
sixfinger/transformers/models/: __init__.py  speedlm.py
sixfinger/transformers/utils/: __init__.py  checkpoint.py  logger.py
