[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sixfinger"
version = "2.1.1"
description = "Official Python SDK for Sixfinger AI API (OpenAI-compatible)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sixfinger Team", email = "sixfingerdev@gmail.com"}
]
keywords = ["ai", "llm", "api", "chatgpt", "openai", "claude", "sixfinger"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.7.0"]
all = ["aiohttp>=3.7.0"]

[project.urls]
Homepage = "https://api.sixfinger.live"
Documentation = "https://api.sixfinger.live/docs"
Repository = "https://github.com/sixfingerdev/sixfinger-api"
Issues = "https://github.com/sixfingerdev/sixfinger-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sixfinger*"]
exclude = ["tests*"]
